Remove earthslimes and buff terracubes
Earthslimes only existed as I was unable to change spawn behavior for vanilla slimes. A new forge feature lets me or in additional spawn options which is now used instead
Earthslimes had one unique feature, spawning with vanilla armor. That ability is now bestowed upon terracubes, which just required minor changes to their renderer. They also jump a bit higher now