@@ -1,6 +1,5 @@
 package slimeknights.tconstruct.common.data.loot;
 
-import net.minecraft.core.Registry;
 import net.minecraft.data.loot.EntityLoot;
 import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.item.Items;
@@ -20,17 +19,17 @@ import slimeknights.tconstruct.shared.TinkerCommons;
 import slimeknights.tconstruct.shared.block.SlimeType;
 import slimeknights.tconstruct.world.TinkerWorld;
 
-import java.util.stream.Collectors;
+import java.util.Map.Entry;
 
 public class EntityLootTableProvider extends EntityLoot {
 
   @Override
   protected Iterable<EntityType<?>> getKnownEntities() {
-    return ForgeRegistries.ENTITY_TYPES.getValues().stream()
+    return ForgeRegistries.ENTITY_TYPES.getEntries().stream()
                                    // remove earth slime entity, we redirect to the vanilla loot table
-                                   .filter((entity) -> TConstruct.MOD_ID.equals(Registry.ENTITY_TYPE.getKey(entity).getNamespace())
-                                                       && entity != TinkerWorld.earthSlimeEntity.get())
-                                   .collect(Collectors.toList());
+                                   .filter(entry -> TConstruct.MOD_ID.equals(entry.getKey().location().getNamespace()))
+                                   .<EntityType<?>>map(Entry::getValue)
+                                   .toList();
   }
 
   @Override
